Fix channel index overflow styling

--- a/app/assets/stylesheets/chat/buddy_list.scss
+++ b/app/assets/stylesheets/chat/buddy_list.scss
@@ -37,6 +37,8 @@
 
   padding: 5px 8px;
 
+  overflow: scroll;
+
   li {
     cursor: pointer;
 
